tests/errors/test_27.x
// Address of operand only applicable to variables

fn main() -> int {

    let x: int* = &2;

}